[tool.poetry]
name = "microcentral"
version = "0.1.0"
description = "A Central Dashboard to manage and monitor all tactful.ai services"
authors = ["Ahmed Eltaher <ahmedheltaher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.40"
pydantic = "^2.8.2"
Jinja2 = "^3.1.2"
psycopg2 = "^2.9.3"
alembic = "^1.8.1"
pyyaml = "^6.0"
pyjwt = "^2.5.0"
pydantic-settings = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
